<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textColor="@color/red"
                android:textAlignment="center"
                android:textSize="45dp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bookingButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/buttonHeight"

                android:layout_marginTop="100dp"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/buttondesign"
                android:text="@string/booking"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/buttonTextSize"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/profilButton"
                android:layout_width="0dp"
                android:layout_marginHorizontal="50dp"
                android:layout_height="@dimen/buttonHeight"
                android:layout_marginTop="160dp"

                android:background="@drawable/buttondesign"
                android:text="@string/profil"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/buttonTextSize"
                android:onClick="goToProfile"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginTop="260dp"

                android:text="@string/textSearch"
                android:textAlignment="center"
                android:textSize="20dp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/beginBooking"
                android:layout_width="0dp"
                android:layout_marginHorizontal="25dp"
                android:layout_height="@dimen/inputBookingHeight"
                android:layout_marginTop="300dp"

                android:background="@drawable/inputdatebooking"
                android:inputType="date"
                android:hint="@string/beginBooking"
                android:textAlignment="center"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/endOfBooking"
                android:layout_width="0dp"
                android:layout_marginHorizontal="25dp"
                android:layout_height="@dimen/inputBookingHeight"
                android:layout_marginTop="360dp"

                android:background="@drawable/inputdatebooking"
                android:inputType="date"
                android:hint="@string/endOfBooking"
                android:gravity="center"
                android:textAlignment="center"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="0dp"
                android:layout_marginHorizontal="50dp"
                android:layout_height="@dimen/buttonHeight"
                android:layout_marginTop="430dp"

                android:background="@drawable/buttondesign"
                android:text="@string/searchButton"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/buttonTextSize"
                android:onClick="searchVehicule"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>